update text for translations

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -1,17 +1,17 @@
 {
     "navigation": {
         "services": ["Services", "Tjenester"],
-        "web-development": ["Web Development", "Web utvikling"],
+        "web-development": ["Web Development", "Webutvikling"],
         "web-development-des":["High traffic websites, ecommerce & web apps", "Nettsteder med høy trafikk, e-handel og webapper"],
-        "mobile-development": ["Mobile Development", "Mobil utvikling"],
+        "mobile-development": ["Mobile Development", "Mobilutvikling"],
         "mobile-development-des":["Powerful, efficient and convenient phone apps", "Kraftige, effektive og praktiske telefonapper"],
-        "ui-design": ["UI & UX Design", "UI- og UX-design"],
+        "ui-design": ["UI & UX Design", "UI & UX Design"],
         "ui-design-des": ["Awesome end-user interfaces & experience", "Fantastiske sluttbrukergrensesnitt og opplevelse"],
         "branding": ["Branding", "Merkevarebygging"],
         "branding-des": ["Creativity, purpose, knowledge & business", "Kreativitet, formål, kunnskap og virksomhet"],
         "illustration": ["Illustration", "Illustrasjon"],
         "illustration-des": ["Visual storytelling, iconography & digital art", "Visuell historiefortelling, ikonografi og digital kunst"],
-        "marketing-material": ["Marketing Material", "Markedsføring smateriale"],
+        "marketing-material": ["Marketing Material", "Markedsføringsmateriell"],
         "marketing-material-des": ["Optimized- & brand consistent messages", "Optimaliserte & merkekonsistente meldinger"],
         "portfolio": ["Portfolio", "Portefølje"],
         "products": ["Products", "Produkter"],
@@ -22,23 +22,23 @@
         "blog": ["Blog", "Blogg"],
         "contact": ["Contact", "Kontakt"],
         "login": ["Login", "Logg inn"],
-        "craft-enterprise": ["Craft Enterprise", "Start prosjekt"],
+        "craft-enterprise": ["Craft Enterprise", "Star prosjekt"],
         "dashboard": ["Dashboard", "Dashboard"],
         "logout": ["Logout", "Logg ut"],
         "login-as": ["Logged in as ", "logget inn som "]
     },
     "footer": {
         "language": ["Language:", "Språk:"],
-        "marketing": ["Marketing", "Markedsføring"],
+        "marketing": ["Marketing", "Markedsføringsmateriell"],
         "platform": ["Platform", "Plattform"],
-        "creatives": ["Creatives", "Reklamer"],
+        "creatives": ["Creatives", "Kreatører"],
         "pricing": ["Pricing", "Priser"],
         "company": ["Company", "Selskap"],
         "about-us": ["About us", "Om oss"],
         "get-started": ["Get started", "Kom i gang"],
-        "signup": ["Sign up", "Melde deg på"],
-        "apply-as-designer": ["Apply as Designer", "søke om som designer"],
-        "apply-as-developer": ["Apply as Developer", "søke om som utvikler"],
+        "signup": ["Sign up", "Opprett konto"],
+        "apply-as-designer": ["Apply as Designer", "Søk som designer"],
+        "apply-as-developer": ["Apply as Developer", "Søk som utvikler"],
         "legal": ["Legal", "Lovlig"],
         "privacy": ["Privacy", "Personvern"],
         "data-processor": ["Data Processor", "Databehandler"],
@@ -61,17 +61,14 @@
     },
     "contact": {
         "name": ["Name", "Navn"],
-        "company-name": ["Company Name", "selskapsnavn"],
-        "your-company": ["Your company", "Din bedrift"],
-        "email-address": ["E-mail address", "Epostadresse"],
-        "work-email": ["Work email", "Arbeid e-post"],
-        "phone": ["Phone", "telefon"],
-        "your-phone": ["Your phone number", "Telefonnummeret ditt"],
-        "write-message": ["Write your message", "Skriv meldingen"],
+        "company-name": ["Company Name", "Selskapsnavn"],
+        "email-address": ["E-mail address", "E-post"],
+        "phone": ["Phone", "Telefon"],
+        "write-message": ["Write your message", "Skriv melding"],
         "message": ["What can we help you with?", "Hva kan vi hjelpe deg med?"],
-        "send-message": ["Send message", "Sende melding"],
-        "clicking-agree": ["By clicking 'Send message', I agree to FantasyLab's ", "Ved å klikke på 'Send melding', godtar jeg FantasyLab"],
-        "privacy-policy": ["Privacy Policy", "Personvern Politikk"]
+        "send-message": ["Send message", "Send melding"],
+        "clicking-agree": ["By clicking 'Send message', I agree to FantasyLab's ", "Ved å klikke 'Send melding', godkjenner du Fantasylab's"],
+        "privacy-policy": ["Privacy Policy", "personvern"]
     },
     "login": {
         "welcome-message": ["Sign into FantasyLab", "Logg deg på FantasyLab"],
