fix bug on editing review description and style updating

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -4,7 +4,7 @@
         "web-development": ["Web Development", "Webutvikling"],
         "web-development-des":["High traffic websites, ecommerce & web apps", "Nettsteder med høy trafikk, e-handel og webapper"],
         "mobile-development": ["Mobile Development", "Mobilutvikling"],
-        "mobile-development-des":["Powerful, efficient and convenient phone apps", "Kraftige, effektive og praktiske telefonapper"],
+        "mobile-development-des":["Powerful, effective and practical phone apps", "Kraftige, effektive og praktiske telefonapper"],
         "ui-design": ["UI & UX Design", "UI & UX Design"],
         "ui-design-des": ["Awesome end-user interfaces & experience", "Fantastiske sluttbrukergrensesnitt og opplevelse"],
         "branding": ["Branding", "Merkevarebygging"],
