remove space on home page mobile responsive and footer translation marketing

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -29,7 +29,7 @@
     },
     "footer": {
         "language": ["Language:", "Språk:"],
-        "marketing": ["Marketing", "Markedsføringsmateriell"],
+        "marketing": ["Marketing Material", "Markedsføringsmateriell"],
         "platform": ["Platform", "Plattform"],
         "creatives": ["Creatives", "Kreatører"],
         "pricing": ["Pricing", "Priser"],
