resolve header navigation dropdown header item style issue

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -11,7 +11,7 @@
         "branding-des": ["Creativity, purpose, knowledge & business", "Kreativitet, formål, kunnskap og virksomhet"],
         "illustration": ["Illustration", "Illustrasjon"],
         "illustration-des": ["Visual storytelling, iconography & digital art", "Visuell historiefortelling, ikonografi og digital kunst"],
-        "marketing-material": ["Marketing Material", "Markedsføringsmateriell"],
+        "marketing-material": ["Marketing Material", "Markedsføring Materiell"],
         "marketing-material-des": ["Optimized- & brand consistent messages", "Optimalisert og «merkevare konsistent» budskap"],
         "portfolio": ["Portfolio", "Portefølje"],
         "products": ["Products", "Produkter"],
