update navigation for desktop and mobile and resolve contact page style issue

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -16,7 +16,9 @@
         "portfolio": ["Portfolio", "Portefølje"],
         "products": ["Products", "Produkter"],
         "managed-hosting": ["Managed Hosting", "Administrert Hosting"],
-        "managed-hosting-des": ["High performance managed hosting for your app.", "Administrert hosting med høy ytelse for appen din."],
+        "managed-hosting-des": ["High performance managed hosting for your app", "Administrert hosting med høy ytelse for appen din"],
+        "wordpress-service": ["WP Service Agreement", "WP Serviceavtale"],
+        "wordpress-service-des" : ["Let us maintain your WordPress website", "La oss vedlikeholde din WordPress nettside"],
         "features": ["Features", "Funksjoner"],
         "about": ["About", "Om oss"],
         "blog": ["Blog", "Blogg"],
