--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -69,9 +69,10 @@
         "phone": ["Phone", "Telefon"],
         "write-message": ["Write your message", "Skriv melding"],
         "message": ["What can we help you with?", "Hva kan vi hjelpe deg med?"],
-        "send-message": ["Send message", "Send melding"],
-        "send-request": ["Send request", "Send forespørsel"],
-        "clicking-agree": ["By clicking 'Send message', I agree to FantasyLab's ", "Ved å klikke 'Send melding', godkjenner du Fantasylab's"],
+        "send-message": ["Send Message", "Send Melding"],
+        "send-request": ["Send Request", "Send Forespørsel"],
+        "clicking-agree": ["By clicking 'Send Message', I agree to FantasyLab's ", "Ved å klikke 'Send Melding', godkjenner du Fantasylab's"],
+        "clicking-agree-wp": ["By clicking 'Send Request', I agree to FantasyLab's ", "Ved å klikke 'Send Forespørsel', godkjenner du Fantasylab's"],
         "privacy-policy": ["Privacy Policy", "personvern"],
         "select-agreement": ["Select desired agreement", "Velg ønsket avtale"]
     },
