change plan item style and cms function for adding & removing options

--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -93,6 +93,7 @@
         "header-sub-img": ["Header Sub Image", "Overskrift underbilde"],
         "header-mobile-img": ["Header Mobile Image", "Overskrift mobilbilde"],
         "save": ["Save", "Lagre"],
+        "add": ["Add", "Legg til"],
         "footer-section": ["Footer Section", "Bunntekst seksjon"],
         "btn-name": ["Button name", "Knappenavn"],
         "link": ["Link", "Lenke"],
