--- a/resources/assets/js/translations/global.json
+++ b/resources/assets/js/translations/global.json
@@ -44,7 +44,8 @@
         "legal": ["Legal", "Lovlig"],
         "privacy": ["Privacy", "Personvern"],
         "data-processor": ["Data Processor", "Databehandler"],
-        "terms": ["Terms", "Vilkår"],
+        "terms": ["Terms", "Kjøpsvilkår"],
+        "and": [" and ", " og "],
         "confidentiality": ["Confidentiality", "Konfidensialitet"],
         "web-development": ["Web Development", "Webutvikling"],
         "mobile-development": ["Mobile Development", "Mobil utvikling"]
@@ -71,10 +72,11 @@
         "message": ["What can we help you with?", "Hva kan vi hjelpe deg med?"],
         "send-message": ["Send Message", "Send Melding"],
         "send-request": ["Send Request", "Send Forespørsel"],
-        "clicking-agree": ["By clicking 'Send Message', I agree to FantasyLab's ", "Ved å klikke 'Send Melding', godkjenner du Fantasylab's"],
-        "clicking-agree-wp": ["By clicking 'Send Request', I agree to FantasyLab's ", "Ved å klikke 'Send Forespørsel', godkjenner du Fantasylab's"],
+        "clicking-agree": ["By clicking 'Send Message', I agree to FantasyLab's ", "Ved å klikke 'Send Melding', godkjenner du Fantasylab's "],
+        "clicking-agree-wp": ["I confirm having read and accepted FantasyLab's ", "Jeg bekrefter å ha lest og godtatt FantasyLab's "],
         "privacy-policy": ["Privacy Policy", "personvern"],
-        "select-agreement": ["Select desired agreement", "Velg ønsket avtale"]
+        "select-agreement": ["Select desired agreement", "Velg ønsket avtale"],
+        "wp-extend-des": ["Order WordPress Service Agreement for only NOK 499, - excl. VAT or NOK 999, - excl. VAT. Sold as a subscription with no binding time. After the order is placed, I will receive a quarterly invoice. To cancel your subscription, you must contact customer service within 14 days of the invoice date. In case of late termination, the invoice must be paid. We are available to you!", "Bestill WordPress Serviceavtale til kun kr 499,- eks. mva. eller kr 999,- eks. mva. Selges som et abonnement uten bindingstid. Etter at ordren er lagt inn vil jeg motta en kvartalsvis faktura. For å si opp abonnementet må du kontakte kundeservice innen 14 dager etter fakturadato. Ved for sen oppsigelse forplikter du deg til å betale fakturaen. Vi er tilgjengelig for deg!"]
     },
     "alert": {
         "page-not-ready": ["Page is not ready yet.", "Siden er ikke klar ennå."],
